--- a/style.css
+++ b/style.css
@@ -37,3 +37,10 @@ p {
   margin-top: 20px;
   margin-left: 320px;
 }
+
+.card {
+  background-color: rgb(34, 105, 212);
+  color: white;
+  font-weight: bolder;
+  width: auto;
+}
