--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@ body {
 }
 
 h1 {
-  color: black;
-  padding-left: 10px;
+  color: white;
+  margin-left: 35%;
 }
 
 h5 {
@@ -25,11 +25,27 @@ p {
   width: 75%;
   background-color: white;
 }
+
 #search-input {
-  margin-left: 10px;
+  margin-left: 25px;
   height: 36px;
-  margin-top: 8px;
+  margin-top: 10px;
   background-color: white;
+  color: black;
+  border-color: rgb(52, 157, 52);
+}
+
+/* #search-btn {
+  background-color: white;
+  height: 36px;
+  color: rgb(52, 157, 52);
+  border-color: rgb(52, 157, 52);
+} */
+
+#search-history {
+  margin-left: 25px;
+  margin-top: 10px;
+  width: 73%;
 }
 
 .forecastDisplay {
